# BattleShip

./: CMakeLists.txt  README.md  ai.c  funcions.c  funcions.h  functions.c  functions.h  initialization.c  loadsave.c  logic.c  main.c  tipus.h  types.h  visual.c
battleship/: ai.c  types.h
doc/: BattleShip_AI_ Results.xlsx  Battleship_AI_Script.docx
src/: ai.c  functions.h  initialization.c  loadsave.c  logic.c  main.c  types.h  visual.c
